# music_hackathon

./: .gitignore  AGENTS.md  README.md
apps/ios/: README.md
apps/ios/MusicHackathon.xcodeproj/: project.pbxproj
apps/ios/MusicHackathonTests/: AppLanguageTests.swift  AppleMusicLibraryCacheStoreTests.swift  AppleMusicLibraryStoreTests.swift  ArtworkImageSystemTests.swift  DiagnosticsLogWriterTests.swift  LocalizationResourceTests.swift  MarbleAvatarRendererTests.swift  MigrationModelsTests.swift  RadioAgentClientTests.swift  RadioMemoryStoreTests.swift  RadioPlaybackSnapshotStoreTests.swift  RadioRecommendationEngineTests.swift  RadioStateStoreTests.swift  RadioStationClientTests.swift  VirtualMusicLibraryTests.swift  (+1 more)
apps/music-archive/: App.tsx  app.json  package-lock.json  package.json
apps/radio-agent/: .env.example  Dockerfile  pyproject.toml  railway.json  start.sh
apps/radio-agent/src/radio_agent/: __init__.py  api.py  discover_db.py  fallbacks.py  graph.py  llm.py  memory.py  prompts.py  repair.py  schemas.py  speech.py  state_helpers.py  voices.py
apps/radio-agent/tests/: test_api.py  test_graph.py  test_llm.py  test_memory.py
apps/rn-discovery/: DESIGN.md  app.json  package-lock.json  package.json
docs/: THIRD_PARTY_NOTICES.md  discover-radio-feature-breakdown-report.md  discover-radio-simple-requirements-prd.md  personal-music-discover-radio-prd-v0.5.2.md  personal-music-slog-radio-prd-v0.1.md  personal-music-slog-radio-prd-v0.2.md  personal-music-slog-radio-prd-v0.3.md  slog-radio-agent-architecture-blueprint.html  slog-radio-agent-architecture.md
(+109 files in other folders)
